[package]
name = "args"
version = "0.1.0"
authors = ["ysoftman <ysoftman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt 는 한때 표준처럼 쓰였지만, 현재는 유지보수 중단 상태입니다.
# clap 3.x 버전에 structopt 기능이 통합되었기 때문에 더 이상 쓸 필요가 없습니다.
# structopt = "0.3"
clap = { version = "4", features = ["derive"] }
