[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["ysoftman <ysoftman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# crate(크레이트) 는 패키지
# rand 크레이트 사용
rand = "0.4.0"

[profile.dev]
# 최적화 레벨(0~3:최대)
opt-level = 0

[profile.release]
# 최적화 레벨
opt-level = 3
